; ModuleID = '/home/carl/AnghaBench/curl/packages/OS400/extr_ccsidcurl.c_curl_slist_append_ccsid.c'
source_filename = "/home/carl/AnghaBench/curl/packages/OS400/extr_ccsidcurl.c_curl_slist_append_ccsid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_slist = type { i32 }

@ASCII_CCSID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.curl_slist* @curl_slist_append_ccsid(%struct.curl_slist* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.curl_slist*, align 8
  %5 = alloca %struct.curl_slist*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store %struct.curl_slist* %0, %struct.curl_slist** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* null, i8** %8, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %15, label %11

11:                                               ; preds = %3
  %12 = load %struct.curl_slist*, %struct.curl_slist** %5, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = call %struct.curl_slist* @curl_slist_append(%struct.curl_slist* %12, i8* %13)
  store %struct.curl_slist* %14, %struct.curl_slist** %4, align 8
  br label %30

15:                                               ; preds = %3
  %16 = load i32, i32* @ASCII_CCSID, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = call i8* @dynconvert(i32 %16, i8* %17, i32 -1, i32 %18)
  store i8* %19, i8** %8, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %15
  store %struct.curl_slist* null, %struct.curl_slist** %4, align 8
  br label %30

23:                                               ; preds = %15
  %24 = load %struct.curl_slist*, %struct.curl_slist** %5, align 8
  %25 = load i8*, i8** %8, align 8
  %26 = call %struct.curl_slist* @curl_slist_append(%struct.curl_slist* %24, i8* %25)
  store %struct.curl_slist* %26, %struct.curl_slist** %5, align 8
  %27 = load i8*, i8** %8, align 8
  %28 = call i32 @free(i8* %27)
  %29 = load %struct.curl_slist*, %struct.curl_slist** %5, align 8
  store %struct.curl_slist* %29, %struct.curl_slist** %4, align 8
  br label %30

30:                                               ; preds = %23, %22, %11
  %31 = load %struct.curl_slist*, %struct.curl_slist** %4, align 8
  ret %struct.curl_slist* %31
}

declare dso_local %struct.curl_slist* @curl_slist_append(%struct.curl_slist*, i8*) #1

declare dso_local i8* @dynconvert(i32, i8*, i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
